--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,3 +1,14 @@
 <h1>Reservations#index</h1>
 <p>Find me in app/views/reservations/index.html.erb</p>
 <%= link_to "Voir les indicateurs", show_indicators_reservations_path %>
+
+<h1>Import reservations</h1>
+<%= form_tag import_reservations_path, multipart: true do %>
+  <%= file_field_tag :file %>
+  <%= submit_tag "Import" %>
+  <%=flash[:notice] =  %>
+<% end %>
+
+<div>
+<%= link_to "Voir les indicateurs", show_indicators_reservations_path %>
+</div>
