--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,13 +1,24 @@
-<h1>Reservations#index</h1>
-<p>Find me in app/views/reservations/index.html.erb</p>
-<%= link_to "Voir les indicateurs", show_indicators_reservations_path %>
-
 <h1>Import reservations</h1>
 <%= form_tag import_reservations_path, multipart: true do %>
   <%= file_field_tag :file %>
   <%= submit_tag "Import" %>
 <% end %>
 
+  <!-- Message d'alerte pour informer que le fichier a bien été importé -->
+  <% if flash[:notice] %>
+    <div class="alert alert-success">
+      <%= flash[:notice] %>
+    </div>
+  <% end %>
+
+  <!-- Message d'alerte pour informer qu'aucun fichier n'a été selectionné' -->
+  <% if flash[:alert] %>
+    <div class="alert alert-danger">
+      <%= flash[:alert] %>
+    </div>
+  <% end %>
+
+  <!-- Redirection vers les indicateurs -->
 <div>
 <%= link_to "Voir les indicateurs", show_indicators_reservations_path %>
 </div>
